Hide last year's registration information for clarity

--- a/_imports/navbarHeader.html
+++ b/_imports/navbarHeader.html
@@ -12,9 +12,9 @@
 						Home
 					</strong>
 				</a>
-				<a class="navbar-item" href="/#register">
+				<!-- <a class="navbar-item" href="/#register">
 					Register
-				</a>
+				</a> -->
 				<a class="navbar-item" href="/about-instructors.html">
 					About
 				</a>
