--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						</h2>
 						<h2 class="subtitle">
 							<strong>
-								Monday-Friday • Register by July 2th
+								Monday-Friday • 2020 information coming soon!
 							</strong>
 						</h2>
 						<h2 class="subtitle">
@@ -54,39 +54,9 @@
 						</h2>
 						<a class="button is-link is-large has-no-textshadow" href="#register" id="volbtn">
 							<span>
-								Register Now
+								Registration Coming Soon
 							</span>
 						</a>
-						<br>
-						<br>
-						<div style="max-width: 800px; margin: 0 auto;">
-							<article class="message is-info has-no-textshadow is-relative-root">
-								<div class="message-header">
-									<p>Info: Expansion</p>
-								</div>
-								<div class="message-body">
-									Our Nurture Kids AM session is full. If you were planning on joining our AM session,
-									please contact us at <code>camp@irvingtonrobotics.org</code>, and we will see if we are able to make
-									accommodations.
-									<br/>
-									<br/>
-									Due to growing demand, we are partnering with Warm Springs
-									Genius Kids to host a second summer camp in late July/August.
-									If you are interested in attending our summer camp at Warm Springs
-									Genius Kids,
-									<a href="#genius" onclick="chooseCamp('genius')">
-										follow the registration steps
-									</a>
-									to secure your spot in
-									our camp. Your spot in this camp will not be secured until
-									you finish all registration steps.
-								</div>
-								<div class="corner-icon is-top-right is-hidden-mobile">
-									<img src="img/genius-kids.png" width=100 class="image-pop">
-								</div>
-							</article>
-						</div>
-						<br>
 					</div>
 					<div class="has-text-centered is-hidden-mobile">
 						<br />
@@ -124,7 +94,7 @@
 						Register by
 					</p>
 					<p class="title">
-						July 9th
+						Coming Soon
 					</p>
 				</div>
 			</div>
@@ -238,7 +208,7 @@
 	<section class="section has-text-centered is-branded has-text-white">
 		<div class="container">
 			<h1 class="title has-text-white">
-				Meet the Instructors
+				Meet the (2019) Instructors
 			</h1>
 			<sergey-import src="instructorsMessage" />
 			<br>
@@ -295,348 +265,8 @@
 	</a>
 	<section class="section has-text-centered">
 		<h1 class="title">
-			Choose a Camp Location
+			2020 Registration Coming Soon!
 		</h1>
-		<p>
-			We offer two camps: one at Nurture Kids and one at Warm Springs Genius Kids.
-			Which would you like to sign up for?
-		</p>
-		<br>
-		<div id="choose-buttons" class="buttons has-addons is-centered">
-			<button id="choose-nurture" class="button is-size-5"> Nurture Kids </button>
-			<button id="choose-genius" class="button is-size-5"> Genius Kids </button>
-		</div>
-	</section>
-	<section class="section has-text-centered is-different">
-		<div class="container">
-			<h1 class="title">
-				Schedule
-			</h1>
-			<h2 class="subtitle">
-				Email <code>camp@irvingtonrobotics.org</code> if you have any questions.
-			</h2>
-			<div class="columns">
-				<div class="column"></div>
-				<div class="column is-5 nurture">
-					<h3 class="title is-4"> Nurture Kids <h3>
-					<p class="subtitle is-5">
-						Dates: July 15 to July 26
-					</p>
-					<table class="table is-hcentered is-striped is-hoverable is-bordered">
-						<tr>
-							<th> Session 1 </th>
-							<th> Session 2 </th>
-						</tr>
-						<tr>
-							<td class="is-danger">	9:00AM to 1:00PM	</td>
-							<td class="is-warning">	2:00PM to 5:00PM	</td>
-						</tr>
-					</table>
-				</div>
-				<div class="column is-5 genius">
-					<h3 class="title is-4"> Warm Springs Genius Kids <h3>
-					<table class="table is-hcentered is-striped is-hoverable is-bordered">
-						<tr>
-							<th> Week 1 </th>
-							<th> Week 2 </th>
-							<th> Both weeks </th>
-						</tr>
-						<tr>
-							<td class="is-warning">
-								July 8 to July 12
-								<br />
-								2:00PM to 5:00PM
-							</td>
-							<td class="is-warning">
-								July 15 to July 19
-								<br />
-								2:00PM to 5:00PM
-							</td>
-							<td class="is-warning">
-								July 8 to July 19
-								<br/>
-								2:00PM to 5:00PM
-							</td>
-						</tr>
-					</table>
-				</div>
-				<div class="column"></div>
-			</div>
-			<table class="table is-hcentered is-striped is-bordered">
-				<tr>
-					<th> Key: </th>
-					<td class="is-success"> Empty </td>
-					<td class="is-warning"> Filling up </td>
-					<td class="is-danger"> Full </td>
-				</tr>
-			</table>
-			<br />
-			<p>
-				Student will be split by age and skill to learn in separate groups.
-			</p>
-			<p>
-				Maximum session size of <b>15</b>.
-			</p>
-			<p>
-				You may either sign up for one week or two weeks.
-				<br>
-				One week: July 8 to July 12 or July 15 to July 19 (5 days)
-				<br>
-				Two weeks: July 8 to July 19 (10 days)
-			</p>
-		</div>
-	</section>
-	<section class="section has-text-centered is-different">
-		<div class="container">
-			<h1 class="title">
-				Tuition Structure
-			</h1>
-			<div class="columns">
-				<div class="column"></div>
-				<div class="column is-5 nurture">
-					<h3 class="title is-4"> Nurture Kids <h3>
-					<table class="table is-hcentered is-striped is-hoverable">
-						<tr>
-							<th>
-								Camp Tuition
-							</th>
-							<td>
-								$165.02
-							</td>
-						</tr>
-						<tr>
-							<th>
-								Kit Cost
-							</th>
-							<td>
-								$84.98
-							</td>
-						</tr>
-						<tr class="is-selected has-background-info">
-							<th>
-								Total Tuition
-							</th>
-							<th>
-								$250.00
-							</th>
-						</tr>
-						<tr>
-							<th>
-								Lunch (optional)
-							</th>
-							<td>
-								$8 per day of camp
-							</td>
-						</tr>
-						<tr class="is-selected has-background-info">
-							<th>
-								Total Tuition with Lunch
-							</th>
-							<th>
-								$330.00
-							</th>
-						</tr>
-					</table>
-				</div>
-				<div class="column is-5 genius">
-					<h3 class="title is-4"> Warm Springs Genius Kids <h3>
-					<table class="table is-hcentered is-striped is-hoverable">
-						<tr>
-							<th>	</th>
-							<th> Two weeks </th>
-							<th> One week </th>
-						</tr>
-						<tr>
-							<th>
-								Camp Tuition
-							</th>
-							<td>
-								$125.02
-							</td>
-							<td>
-								$62.51
-							</td>
-						</tr>
-						<tr>
-							<th>
-								Kit Cost
-							</th>
-							<td>
-								$84.98
-							</td>
-							<td>
-								$84.98
-							</td>
-						</tr>
-						<tr class="is-selected has-background-info">
-							<th>
-								Total Tuition
-							</th>
-							<th>
-								$210.00
-							</th>
-							<th>
-								$147.49
-							</th>
-						</tr>
-					</table>
-				</div>
-				<div class="column"></div>
-			</div>
-		</div>
-	</section>
-	<section class="section is-different">
-		<div class="container">
-			<h1 class="title has-text-centered">
-				Registration Steps
-			</h1>
-			<h2 class="subtitle has-text-centered">
-				Need help? Contact us at <code>camp@irvingtonrobotics.org</code>
-				or call
-				<a href="tel:5105120863">
-					(510) 512-0863
-				</a>
-				.
-			</h2>
-		</div>
-		<br />
-		<div class="container">
-			<div class="columns">
-				<div class="column"></div>
-				<div class="column is-5 nurture">
-					<h4 class="title is-4 has-text-centered">
-						Nurture Kids
-					</h4>
-					<div class="">
-						<h5 class="title is-5">
-							Step 1: Fill Out Student Information Form
-						</h5>
-						<p>
-							Fill out
-							<a
-								href="https://docs.google.com/forms/d/e/1FAIpQLSef-Z8XUCSDe_XGCZ6Lt2ZZui9RDS98ANA7ZL-A7REyLs87WQ/viewform">
-								this form</a>.
-						</p>
-					</div>
-					<br />
-					<div class="">
-						<h5 class="title is-5">
-							Step 2: Fill Out Nurture Kids Registration Packet
-						</h5>
-						<p>
-							Fill out
-							<a href="assets/Arduino-Robotics-Registration-Packet-2019-Nurture.pdf">
-								this registration packet</a>.
-						</p>
-						<p>
-							The completed and signed physical packet may be dropped off at
-							<a href="https://goo.gl/maps/SXCVYp46S9S2">
-								46517 Mission Blvd, Fremont, CA 94539
-							</a>
-							<strong>
-								or
-							</strong>
-							you may email the completed and signed packet to
-							<code>camp@irvingtonrobotics.org</code>.
-						</p>
-					</div>
-					<br />
-					<div class="">
-						<h5 class="title is-5">
-							Step 3: Submit Tuition
-						</h5>
-						<p>
-							Submit a check payable to
-							<strong>
-								VipArya Inc.
-							</strong>
-							to
-							<a href="https://goo.gl/maps/SXCVYp46S9S2">
-								Nurture Kids Warm Springs
-							</a>
-							by July 2nd.
-						</p>
-						<p>
-							The camp is $250.00 without lunch or $330.00 with lunch.
-						</p>
-					</div>
-				</div>
-				<div class="column is-5 genius">
-					<h4 class="title is-4 has-text-centered">
-						Warm Springs Genius Kids
-					</h4>
-					<div class="">
-						<h5 class="title is-5">
-							Step 1: Fill Out Student Information Form
-						</h5>
-						<p>
-							Fill out
-							<a
-								href="https://docs.google.com/forms/d/e/1FAIpQLSevvIDLZiEG6yOQWlgxTsdbMF5u-ExvpoK2LR0JVfCMr1NM8A/viewform">
-								this form</a>.
-						</p>
-					</div>
-					<br />
-					<div class="">
-						<h5 class="title is-5">
-							Step 2: Fill Out Genius Kids Registration Packet
-						</h5>
-						<p>
-							If you plan to register for the one week camp, fill out
-							<a href="assets/Arduino-Robotics-Registration-Packet-2019-Genius-One-Week.pdf">
-								the one week registration packet
-							</a>.
-						</p>
-						<p>
-							If you plan to register for the two week camp, fill out
-							<a href="assets/Arduino-Robotics-Registration-Packet-2019-Genius-Two-Week.pdf">
-								the two week registration packet
-							</a>.
-						</p>
-						<p>
-							The completed and signed physical packet may be dropped off at
-							<a href="https://goo.gl/maps/5R3cbwLVVvAr4WQz6">
-								46132 Warm Springs Blvd, Fremont, CA 94539
-							</a>
-							<strong>
-								or
-							</strong>
-							you may email the completed and signed packet to
-							<code>camp@irvingtonrobotics.org</code>.
-						</p>
-					</div>
-					<br />
-					<div class="">
-						<h5 class="title is-5">
-							Step 3: Submit Tuition
-						</h5>
-						<p>
-							Submit a check payable to
-							<strong>
-								Geoffrey Zhang
-							</strong>
-							to
-							<a href="https://goo.gl/maps/5R3cbwLVVvAr4WQz6">
-								Genius Kids Warm Springs
-							</a>
-							or PayPal to
-							<a href="//paypal.me/irvingtonrobotics">
-								IrvingtonRobotics
-							</a>
-							by July 2nd.
-						</p>
-						<p>
-							The camp is $147.49 for one week or $210.00 for two weeks.
-						</p>
-						<p>
-							Late registration (between July 2nd and July 5th 11:59 pm) will
-							incur a $15 fee to pay for faster shipping on kits.
-						</p>
-					</div>
-				</div>
-				<div class="column"></div>
-			</div>
-		</div>
 	</section>
 	<br />
 	<sergey-import src="footer" />
