--- a/about-instructors.html
+++ b/about-instructors.html
@@ -58,7 +58,7 @@
 		<br />
 		<a class="button is-link is-large has-no-textshadow" href="/#register" id="volbtn">
 			<span>
-				Register (Coming Soon)
+				Register
 			</span>
 		</a>
 		<br />
