--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						</h2>
 						<a class="button is-link is-large has-no-textshadow" href="#register" id="volbtn">
 							<span>
-								Registration Coming Soon
+								Register
 							</span>
 						</a>
 					</div>
@@ -94,7 +94,7 @@
 						Register by
 					</p>
 					<p class="title">
-						Coming Soon
+						Deadline TBD
 					</p>
 				</div>
 			</div>
@@ -265,8 +265,15 @@
 	</a>
 	<section class="section has-text-centered">
 		<h1 class="title">
-			2020 Registration Coming Soon!
+			Register
 		</h1>
+		<p>
+			We need to finalize registration information. For now, you can be reminded once this information becomes available.
+		</p>
+		<br>
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLScP-9XD3NpErVp1G-JKD6q3_lgKfWT_KhCHh3DB-9PGjNe6bw/viewform?usp=sf_link" class="button is-link is-large">
+			Be reminded
+		</a>
 	</section>
 	<br />
 	<sergey-import src="footer" />
